tests/trybuild/fail.rs
use std::time::Duration;

use duration::duration;

const _DURATION: Duration = duration!("not-a-duration");

fn main() {}
